adding promocodes and map to the bonus
